--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -15,15 +15,6 @@ ul {
   list-style: none;
 }
 
-a {
-  text-decoration: none;
-}
-
-img {
-  max-width: 80%;
-  display: block;
-}
-
 .header-bg {
   background-color: #fff;
 }
@@ -31,10 +22,10 @@ img {
 .header {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 5px;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 10px;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
@@ -47,45 +38,87 @@ img {
 
 .header-menu a {
   color: #000;
-  padding: 16px 20px;
+  padding: 12px 20px;
   display: inline-block;
   font-size: 18px;
-}
-.intro-bg {
-  background-color: #000;
-  color: #fff;
-  padding-left: 20px;
-  padding-right: 20px;
+  text-decoration: none;
+  background-color: #fff;
+  border: 1px solid black;
+  border-radius: 4px;
 }
 
-.intro {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 40px;
-  box-sizing: border-box;
-  max-width: 1200px;
-  padding-left: 20px;
-  padding-right: 20px;
+.intro-bg {
+  color: #fff;
+  background-color: #000;
+  justify-items: center;
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .intro img {
   margin-top: 20px;
+  max-width: 80%;
+  border-radius: 200px;
+  display: block;
+  margin: auto;
 }
 
-.intro h1 {
+.intro-bg a {
+  text-decoration: none;
+  color: #000;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: inline-block;
+  padding: 10px 20px;
+  background: linear-gradient(#8345f0, #ea5af7);
+  border-radius: 4px;
+}
+
+.text {
+  padding-right: 100px;
+}
+
+.text h1 {
   margin-bottom: 32px;
   margin-top: 40px;
   font-size: 40px;
 }
 
-button {
-  text-decoration: none;
-  color: #000;
-  margin-top: 40px;
+.final {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.contato {
+  margin-left: 100px;
+}
+
+.form {
+  background-color: #efefef;
+  align-items: center;
+  padding: 20px 40px;
+  margin-top: 20px;
+  margin-left: 80px;
   margin-bottom: 20px;
-  display: inline-block;
-  padding: 16px 32px;
-  color: #fff;
-  background: linear-gradient(#8345f0, #ea5af7);
-  border-radius: 4px;
+}
+
+label {
+  width: auto;
+}
+
+input {
+  font-size: 1rem;
+  margin-top: 10px;
+}
+
+textarea {
+  margin-top: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+span {
+  font-weight: bold;
 }
